change image path

--- a/rating.html
+++ b/rating.html
@@ -120,7 +120,7 @@
 
           function bindRaty() {
 
-              $.fn.raty.defaults.path = 'img';
+              $.fn.raty.defaults.path = ''
               $('.size-demo').raty({
                   path: '',
                   cancel: false,
