lowerspace image names

--- a/rating.html
+++ b/rating.html
@@ -129,8 +129,8 @@
                   size: 44,
                   hints: ['Horrible', 'Pathetic', 'Ok', 'Good', 'Average', 'Better', 'Great', 'Awesome', 'Fantastic', 'Classic'],
                   starHalf: 'half-small.png',
-                  starOff: 'Off-small.png',
-                  starOn: 'On-small.png',
+                  starOff: 'off-small.png',
+                  starOn: 'on-small.png',
                   score: function () {
                       return $(this).attr('data-score');
                   },
