Changed of touch

--- a/dashboard.html
+++ b/dashboard.html
@@ -17,11 +17,11 @@
                     <img src="back_icon.png" /></a>
             </div>
             <div id="logo">
-                <a href="home.html" title="etransfer.it">
-                    <img src="logo.png" alt="etransfer.it" /></a>
+                <a href="#">
+                    <img src="logo.png"/></a>
             </div>
              <div id="home-icon">
-                <a href="home.html">
+                <a href="dashboard.html">
                     <img src="home_icon.png" /></a>
             </div>
             
