--- a/rating.html
+++ b/rating.html
@@ -21,11 +21,11 @@
                     <img src="back_icon.png" /></a>
             </div>
             <div id="logo">
-                <a href="home.html" title="etransfer.it">
-                    <img src="logo.png" alt="etransfer.it" /></a>
+                <a href="dashboard.html" >
+                    <img src="logo.png" /></a>
             </div>
              <div id="home-icon">
-                <a href="home.html">
+                <a href="dashboard.html">
                     <img src="home_icon.png" /></a>
             </div>
             
@@ -55,6 +55,9 @@
                   error: function (response) {
                       alert(response);
                   }
+              });
+              $("img").on("swiperight", function () {
+                  alert("You swiped right!");
               });
           }
           var Skip = 1;
