--- a/rating.html
+++ b/rating.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"> 
     <script src="http://debug.phonegap.com/target/target-script-min.js#anonymous"></script>
     <script src="js/jquery-1.8.2.min.js"></script>
+    <script src="js/modernizr-latest.js"></script>
     <script src="js/jquery.easing.1.3.js"></script>
   <script type="text/javascript" src="js/jquery.raty.js"></script>
     <script src="js/jquery.cookie.js"></script>
@@ -56,9 +57,7 @@
                       alert(response);
                   }
               });
-              $("img").on("swiperight", function () {
-                  alert("You swiped right!");
-              });
+            
           }
           var Skip = 1;
           $(document).ready(function () {
