--- a/dashboard.html
+++ b/dashboard.html
@@ -7,7 +7,7 @@
     <script src="http://debug.phonegap.com/target/target-script-min.js#anonymous"></script>
     <script src="js/jquery-1.8.2.min.js"></script>
     <script src="js/jquery.cookie.js"></script>
-    
+     <script src="js/modernizr-latest.js"></script>
 </head>
 <body>
   <div class="main">
