--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="http://debug.phonegap.com/target/target-script-min.js#anonymous"></script>
     <script src="js/jquery-1.8.2.min.js"></script>
     <script src="js/jquery.cookie.js"></script>
+     <script src="js/modernizr-latest.js"></script>
     <script src="js/splash.js"></script>
 </head>
 <body>
